# iBOT

./: .2pl5g1ig8tc55332783801~  DBqueries.py  apifunc.py  datalists.py  formattingfunc.py  keep_alive.py  main.py  pyproject.toml  requirements.txt  serverchat.db  userchat.db
