[tool.poetry]
name = "repl_python3_b40-best-bot-ever"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pycountry = "^22.1.10"
emoji-country-flag = "^1.3.0"
Flask = "^2.0.2"
pytz = "^2021.3"
tabulate = "^0.8.9"
Flag = "^0.1.1"
requests = "^2.28.1"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
